<resources>
    <string name="app_name">Arquidiocesis</string>
    <string name="txt_services_hint_search_services">¿Qué servicio buscas?</string>
    <string name="title_dialog_warning">¡Atención!</string>
    <string name="button_go_to_sos">S.O.S</string>
    <string name="button_go_to_call">Llamar</string>
    <string name="button_go_to_descargar">Descargar</string>
    <string name="toobar_title_pdf">PDF</string>
    <string name="toolbar_share">Compartir</string>
    <string name="toobar_done">Done</string>
    <string name="number_pone_default">(55)5573&#8211;2222</string>
    <string name="txt_message_alert_celebrations">Para apartar una misa privada, te invitamos a buscar en tu iglesia principal o favorita el contacto para que puedas apartar la misa</string>
    <string name="txt_description_img_celebrations">TODO</string>
    <string name="txt_title_house_blessing">Bendición de casa</string>
    <string name="txt_applicant">Solicitante</string>
    <string name="txt_family">Familia</string>
    <string name="txt_surnames_blessings">Apellido(s)</string>
    <string name="txtStreetNumberBlessings">Calle y número</string>
    <string name="txt_direction_blessings">Dirección</string>
    <string name="txt_suburb">Colonia</string>
    <string name="txt_postal_code">C.P.</string>
    <string name="txt_hint_suburb">Nombre</string>
    <string name="txt_hint_postal_code">00000</string>
    <string name="txt_email">Correo eléctronico</string>
    <string name="txt_telephone">Teléfono</string>
    <string name="txt_search_church">Buscar Iglesia</string>
    <string name="txt_help_you">¡Queremos ayudarte!</string>
    <string name="txt_sick_name">Nombre del enfermo</string>
    <string name="txt_hint_sick_name">Nombre completo</string>
    <string name="txt_title_justification">Justificación</string>
    <string name="txt_elderly_sick">Persona mayor o enfermo</string>
    <string name="digits_only_address">0123456789 qwertyuiopasdfghjklñzxcvbnm QWERTYUIOPASDFGHJKLÑZXCVBNMáóíéúÁÉÍÓÚ ()=;"'+*,.:_-°</string>
    <string name="digits_only_search">0123456789 qwertyuiopasdfghjklñzxcvbnm QWERTYUIOPASDFGHJKLÑZXCVBNMáóíéúÁÉÍÓÚ </string>
    <string name="digits_only_letters">qwertyuiopasdfghjklñzxcvbnm QWERTYUIOPASDFGHJKLÑZXCVBNMáóíéúÁÉÍÓÚ </string>
    <string name="digits_email">qwertyuiopasdfghjklñzxcvbnmQWERTYUIOPASDFGHJKLÑZXCVBNM1234567890._-@</string>
    <string name="digits_only_number">0123456789</string>
    <string name="tab_services">Servicios</string>
    <string name="tab_history">Historial de Servicios</string>
    <string name="title_admin_services">Información de servicios solicitados</string>
    <string name="hint_search_history">Buscar servicio</string>
    <string name="button_accept">Atender</string>
    <string name="button_cancel">Rechazar</string>
    <string name="label_write_answer">Escribe la respuesta</string>
    <string name="label_answer">Respuesta</string>
    <string name="name_section_services">Servicios</string>
    <string name="name_section_intentions_church">Intenciones por iglesia</string>
    <string name="name_section_intentions_community">Intenciones por comunidades</string>
    <string name="button_ready">Listo</string>
    <string name="services_cancel">Se guardo el comentario del servicio</string>
    <string name="isRequeried">Es requerido</string>
    <string name="tv_status_request">Estatus del servicio</string>
    <string name="button_closed_request">Cerrar servicio</string>
    <string name="tv_name_sick">Nombre del enfermo*</string>
    <string name="message_service_attended_succesfull">¿El servicio se atendió con éxito?</string>
    <string name="message_service_attended_cancel">¿Seguro que quieres cancelar?</string>
    <string name="button_yes">Si</string>
    <string name="button_no">No</string>
    <string name="shared_location_services">Compartir</string>
    <string name="text_download_file">Descargando archivo</string>
    <string name="download_succesfull">La descarga termino con éxito</string>
    <string name="title_screen_shot_image">intención_detalle</string>
    <string name="title_screen_shot_image_description">Detalle de la intencón</string>
    <string name="message_confirm_delete_service">¿Seguro que quieres borrar esta solicitud?</string>
    <string name="tv_accept_calendar">Ok</string>
    <string name="tv_accept_cancel">Cancelar</string>
    <string name="label_church">En la iglesia</string>
    <string name="label_community">En la comunidad</string>
    <string name="description_intentions">Menciones para la misa</string>
    <string name="description_other_services">Bendiciones, celebración y otros</string>
    <string name="message_start_download">Se comenzo con la descarga del archivo pdf, puedes ver el progreso en tu centro de notificaciones.</string>
    <string name="name_section_sacraments">Sacramentos</string>
    <string name="tvEscogeMisaIntencion">Escoge una de las misas del día para solicitar \ntu intención</string>
    <string name="fecha_ejemplo">19 de abril de 2021</string>
    <string name="seleccione_intencion">Selecciona aquí tu intención</string>
    <string name="intencion">Dirigido a</string>
    <string name="descripcion">Descripción</string>
    <string name="nombre">De parte de</string>
    <string name="va_dirigido">Ejemplo: “familia López”</string>
    <string name="donar">Donar</string>
    <string name="solicitar_intencion">Continuar</string>
    <string name="in_text">Introduzca texto</string>
</resources>