<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".ui.IntentionScheduleHourFragment">

            <TextView
                android:id="@+id/textView7"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:lineSpacingExtra="4sp"
                android:text="@string/tvEscogeMisaIntencion"
                android:textColor="#13277c"
                android:textSize="14sp"
                android:textStyle="normal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:lineSpacingExtra="7sp"
                android:text="@string/fecha_ejemplo"
                android:textColor="#13277c"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView7" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvSchedules"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="16dp"
                app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                app:layout_constraintBottom_toTopOf="@id/textView4"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvDate"
                app:spanCount="2"
                tools:listitem="@layout/item_schedule_hour" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/size_24"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="24dp"
                android:layout_marginBottom="8dp"
                android:fontFamily="sans-serif-medium"
                android:letterSpacing="0.01"
                android:lineSpacingExtra="7sp"
                android:text="@string/seleccione_intencion"
                android:textColor="#13277c"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@id/spIntenciones"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <Spinner
                android:id="@+id/spIntenciones"
                android:layout_width="0dp"
                android:layout_height="38dp"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="16dp"
                android:background="@drawable/style_spinner_selector"
                android:ems="10"
                android:lineSpacingExtra="2sp"
                android:paddingEnd="12dp"
                android:paddingRight="13dp"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="@color/edittext_text_hint_color"
                android:textSize="@dimen/font_size_14"
                app:layout_constraintBottom_toTopOf="@id/tvDescription"
                app:layout_constraintEnd_toEndOf="@+id/textView4"
                app:layout_constraintStart_toStartOf="@+id/textView4" />

            <TextView
                android:id="@+id/tvDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/size_24"
                android:ellipsize="end"
                android:ems="3"
                android:fontFamily="sans-serif-medium"
                android:letterSpacing="0.01"
                android:lineSpacingExtra="7sp"
                android:lines="1"
                android:text="@string/intencion"
                android:textColor="#13277c"
                android:textSize="@dimen/font_size_16"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@id/etDescription"
                app:layout_constraintStart_toStartOf="parent" />

            <EditText
                android:id="@+id/etDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/size_24"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="30dp"
                android:layout_marginBottom="16dp"
                android:digits="@string/digits_only_letters"
                android:hint="@string/in_text"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                android:padding="@dimen/small_margin_padding"
                android:textSize="@dimen/font_size_14"
                android:textStyle="normal"
                android:maxLength="99"
                app:layout_constraintBottom_toTopOf="@id/tvName"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />


            <TextView
                android:id="@+id/tvName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/size_24"
                android:layout_marginTop="27dp"
                android:ellipsize="end"
                android:ems="3"
                android:fontFamily="sans-serif-medium"
                android:letterSpacing="0.01"
                android:lineSpacingExtra="7sp"
                android:lines="1"
                android:text="@string/nombre"
                android:textColor="#13277c"
                android:textSize="@dimen/font_size_16"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@id/etName"
                app:layout_constraintStart_toStartOf="parent" />

            <EditText
                android:id="@+id/etName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/size_24"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="30dp"
                android:layout_marginBottom="16dp"
                android:digits="@string/digits_only_letters"
                android:hint="Introduzca texto (opcional)"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                android:padding="@dimen/small_margin_padding"
                android:textSize="@dimen/font_size_14"
                android:textStyle="normal"
                android:maxLength="299"
                android:maxLines="1"
                app:layout_constraintBottom_toTopOf="@id/customSpinner"
                app:layout_constraintStart_toStartOf="parent" />

            <mx.arquidiocesis.eamxcommonutils.util.custom.CustomMontoSpinner
                android:id="@+id/customSpinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/size_24"
                android:layout_marginEnd="24dp"
                android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toTopOf="@id/b_buttons"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <androidx.constraintlayout.widget.Barrier
                android:id="@+id/b_buttons"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:barrierDirection="top"
                app:constraint_referenced_ids="btnDonate,btnFinish" />

            <Button
                android:id="@+id/btnDonate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="64dp"
                android:layout_marginEnd="24dp"
                android:layout_marginBottom="32dp"
                android:background="@drawable/btn_rounded"
                android:text="@string/donar"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                android:textStyle="bold"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:visibility="visible" />

            <Button
                android:id="@+id/btnFinish"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="64dp"
                android:layout_marginEnd="24dp"
                android:layout_marginBottom="32dp"
                android:background="@drawable/btn_rounded"
                android:text="@string/solicitar_intencion"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>